# kg_labs

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json
angular/: Dockerfile  angular.json  package.json
angular/src/labs/: app-routing.module.ts  app.module.ts
angular/src/labs/lab1/converter/: converter.component.css  converter.component.html
angular/src/labs/lab2/image-processing/: image-processing.component.css  image-processing.component.html  image-processing.component.ts
angular/src/labs/lab3/raster-algorithms/: raster-algorithms.component.css  raster-algorithms.component.html  raster-algorithms.component.ts
angular/src/labs/menu/: menu.component.html
fastapi/: pyproject.toml
fastapi/src/: main.py
fastapi/src/lab2/: router.py  service.py
service/: Dockerfile
service/src/: main.py
service/src/lab2/: router.py  service.py
src/: index.html  main.ts
src/labs/: app-routing.module.ts  app.component.ts  app.module.ts
src/labs/lab1/converter/: converter.component.html  converter.component.ts
src/labs/menu/: menu.component.css  menu.component.html
