[tool.poetry]
name = "kg-labs"
version = "0.1.0"
description = ""
authors = ["mmishv <pinina7773@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
opencv-python = "^4.8.1.78"
python-multipart = "^0.0.6"
opencv-contrib-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pre_commit]
hooks = [
  "trailing-whitespace",
  "end-of-file-fixer",
  "check-yaml",
  "debug-statements",
  "requirements-txt-fixer",
  "black",
  "isort",
]

[tool.pre_commit.hook-trailing-whitespace]
files = ["*.py"]

[tool.pre_commit.hook-end-of-file-fixer]
files = ["*.py"]

[tool.pre_commit.hook-check-yaml]
files = ["*.yml", "*.yaml"]

[tool.pre_commit.hook-debug-statements]
files = ["*.py"]

[tool.pre_commit.hook-double-quote-string-fixer]
files = ["*.py"]

[tool.pre_commit.hook-requirements-txt-fixer]
files = ["requirements.txt"]


[tool.pre_commit.hook-black]
files = ["*.py"]

[tool.pre_commit.hook-isort]
args = ["--profile", "black"]
files = ["*.py"]
